--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -36,6 +36,23 @@ $font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida San
     grid-area: 1 / 2 / 2 / 3; 
 }
 
-.overview, .form {
+.overview {
     padding: 20px;
+}
+
+.form {
+    padding: 20px;
+
+    input, button {
+        padding: 5px 10px;
+        margin: 10px 0;
+        font-size: 1em;
+        border-radius: 3px;
+        outline: none;
+    }
+
+    button {
+        margin-left: 10px;
+        cursor: pointer;
+    }
 }
